# next-fastapi-daisy-starter

./: .gitignore  LICENSE  README.md  package-lock.json  package.json  pyproject.toml  tailwind.config.ts  tsconfig.json
api/: main.py
app/: layout.tsx  page.tsx
app/components/: SquigglyLine.tsx
